--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,5 @@
 
-resolver: nightly-2023-04-14
+resolver: lts-22.6
 
 packages:
 - .
-
-extra-deps:
-- git: https://github.com/codedownio/aeson-typescript.git
-  commit: 8985dcfef73873382b5ee05137673053ada12b20
